<resources>
    <string name="app_name">Secure Password</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="reset">重置</string>
    <string name="safebox">密码箱</string>
    <string name="changepassword">修改密码</string>
    <string name="cloudsync">云同步</string>
    <string name="import_">导入</string>
    <string name="export">导出</string>
    <string name="exit">退出</string>
    <string name="lock">锁定</string>
    <string name="copy_to_clipboard">已复制到剪贴板</string>
    <string name="double_click_to_copy">双击复制到剪贴板</string>
    <string name="login">登录</string>
    <string name="login_guide">请输入您的密码\n如果这是您第一次登录\n您的密码将会被设置</string>
    <string name="cancel">取消</string>
    <string name="reset_guide">请输入您的新密码\n这将清空您的所有记录</string>
    <string name="edit">编辑</string>
    <string name="app">应用:</string>
    <string name="acount">账户:</string>
    <string name="password">密码:</string>
    <string name="sync">同步</string>
    <string name="confirm">确认</string>
    <string name="wrong_password">密码错误</string>
    <string name="wrong_safe_file">密码文件版本错误\n请尝试重置</string>
    <string name="unable_to_access_file">无法访问密码文件</string>
    <string name="title_activity_edit_actibity">EditActibity</string>

    <string name="hello_world">Hello world!</string>
    <string name="old_password">旧密码:</string>
    <string name="generate_password">生成密码</string>
    <string name="length">长度</string>
    <string name="uppercase">大写字母</string>
    <string name="number">数字</string>
    <string name="symbol">特殊符号</string>
    <string name="first_char_letter">首位是字母</string>
    <string name="at_least_one_number">至少一个数字</string>
    <string name="at_least_one_symbol">至少一个符号</string>
    <string name="wrong_length">长度错误</string>
    <string name="use_my_password">使用我的密码</string>
    <string name="choose">选择</string>
    <string name="import_file">导入的文件</string>
    <string name="export_file">导出的文件</string>
    <string name="import_file_password">导入文件密码</string>
    <string name="export_file_password">导出文件密码</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="change_password_label">请输入新的密码</string>
    <string name="title_activity_sync">SyncActivity</string>
</resources>
