<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/import_file"
        android:id="@+id/imexport_label_imexport_from"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBaseline="@+id/imexport_choose"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:id="@+id/imexport_choose"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imexport_label_imexport_from"
        android:layout_toEndOf="@+id/imexport_label_imexport_from" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imexport_from"
        android:layout_below="@+id/imexport_choose"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/import_file_password"
        android:id="@+id/imexport_label_imexport_password"
        android:layout_below="@+id/imexport_from"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/imexport_password"
        android:layout_below="@+id/imexport_label_imexport_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_my_password"
        android:id="@+id/imexport_use_my_password"
        android:layout_below="@+id/imexport_from"
        android:layout_toRightOf="@+id/imexport_label_imexport_password"
        android:layout_toEndOf="@+id/imexport_label_imexport_password"
        android:checked="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/import_"
        android:id="@+id/imexport_imexport"
        android:layout_below="@+id/imexport_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/imexport_cancel"
        android:layout_alignTop="@+id/imexport_imexport"
        android:layout_toRightOf="@+id/imexport_imexport"
        android:layout_toEndOf="@+id/imexport_imexport" />
</RelativeLayout>
